--- a/JapaneseLetters/index.html
+++ b/JapaneseLetters/index.html
@@ -9,37 +9,39 @@
 	<!-- Force latest IE rendering engine & Chrome Frame -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>Japanese Letters</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
-	<script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 	<script src="js/hiragana.js"></script>
 	<script type="text/javascript" src="js/application.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse" role="navigation">
-         <div class="container">
-           <div class="navbar-header" id="header">
-             <a class="navbar-brand active" href="#">Hiragana</a>
-             <a class="navbar-brand" href="#">Katakana</a>
-           </div>
-         </div>
-       </div>
-       <div class="container">
-         <div class="textbox">
-	   		<h1>Japanese Letters</h1>
-		<div id="message">
-			<span class="correct" style="display:none">Correct!</span>
-			<span class="wrong" style="display:none">Wrong</span>
-		</div>
-	   	<div id="testletter"></div>
-	   	<div class="answers">
-			<h4>What is this?</h4>
-			<div class="container" id="letters">
+	<header>
+		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+			<ul class="navbar-nav mr-auto">
+	      <li class="nav-item active">
+	        	<a class="nav-link" href="#">Hiragana</a>
+	      </li>
+	      <li class="nav-item">
+	          <a class="nav-link" href="#">Katakana</a>
+	    	</li>
+	    </ul>
+	  </nav>
+	</header>
+	<main role="main" class="container">
+		<div class="textbox">
+			<h1>Japanese Letters</h1>
+			<div id="message">
+				<span class="correct" style="display:none">Correct!</span>
+				<span class="wrong" style="display:none">Wrong</span>
 			</div>
-	   	</div>
-         </div>
-       </div>
+		  <div id="testletter"></div>
+		  <div class="answers">
+				<h4>What is this?</h4>
+				<div class="letters-container" id="letters"></div>
+		  </div>
+		</div>
+	</main>
 </body>
 </html>
