Add jlpt vocabulary

--- a/JapaneseLetters/index.html
+++ b/JapaneseLetters/index.html
@@ -26,6 +26,9 @@
 	      <li class="nav-item">
 	          <a class="nav-link" href="#">Katakana</a>
 	    	</li>
+	      <li class="nav-item">
+	          <a class="nav-link" href="#">Vocabulary</a>
+				</li>
 	    </ul>
 	  </nav>
 	</header>
