--- a/JapaneseLetters/index.html
+++ b/JapaneseLetters/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 			<ul class="navbar-nav mr-auto">
 	      <li class="nav-item active">
 	        	<a class="nav-link" href="#">Hiragana</a>
